--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    z-index: 9999;
+    z-index: 10;
     position: sticky;
     background:linear-gradient(135deg,rgba(255,255,255,0.1), rgba(255,255,255,0));
     backdrop-filter: blur(10px);
@@ -192,6 +192,26 @@
 
     .nav_toggle.open > span:nth-child(3){
         transform: rotate(-45deg) translate(-5px, 1px);
+    }
+
+    .btnNav span{
+        display: none;
+    }
+
+    .btnNav:hover{
+        background: none; 
+        box-shadow: none;
+        transition-delay: none;
+        border: none;
+        border-radius: none;
+    }
+    .nav_items a:hover{
+        background:  none; 
+        box-shadow: none;
+    }
+
+    .nav_items a{
+        transition: none;
     }
 }
 
