--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -9,6 +9,23 @@
     margin-bottom: 100px;
     
 }
+/* maxWidth: '400px', maxHeight: '300px', overflowX:'auto', overflowY: 'auto'  */
+
+.scrollContainer{
+    max-width: 400px;
+    max-height: 300px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
+.pre{
+    background-color: #0a0f18;
+    padding: 10px;
+    width: max-content;
+    border: solid 1px rgb(0, 255, 187);
+    border-top-left-radius: 10px;
+
+}
 
 .gt_container{
     margin: 50px;
@@ -34,7 +51,7 @@
 }
 
 .gt{
-    width: 500px;
+    width: 400px;
     margin-bottom: 40px;
     border-radius: 20px;
 }
@@ -86,6 +103,11 @@
     }
     .proyectos{
         display: none;
+    }
+    .scrollContainer{
+        max-width: max-content;
+        
+        
     }
 }
 
